[tool.poetry]
name = "promptflow"
version = "0.1.0"
description = "LLM Prompt Manager"
authors = ["ck46 <prof.chakas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pydantic = "^2.10.6"
jinja2 = "^3.1.6"
semver = "^3.0.4"
tortoise-orm = "^0.24.2"
aiosqlite = "^0.21.0"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
streamlit = "^1.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
